--- a/tracker/templates/index.html
+++ b/tracker/templates/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/media/css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 <body>
@@ -19,35 +20,45 @@
         />
         <div class="balance-container">
           <h2>Your Balance</h2>
-          <h2 id="balance" class="balance">$0.00</h2>
+          <h2 id="balance" class="balance">${{balance}}</h2>
         </div>
       </div>
       <div class="inc-exp-container">
         <div>
           <h4>Income</h4>
-          <p id="money-plus" class="money plus">+$0.00</p>
+          <p id="money-plus" class="money plus">+${{income}}</p>
         </div>
         <div>
           <h4>Expenses</h4>
-          <p id="money-minus" class="money minus">-$0.00</p>
+          <p id="money-minus" class="money minus">-${{expense}}</p>
         </div>
       </div>
       <h3>History</h3>
-      <ul id="list" class="list"></ul>
+      <ul id="list" class="list">
+        {% for transaction in transactions %}
+
+        <li class="{% if transaction.expense_type == 'DEBIT' %} minus {% else %} plus {% endif %}">
+            {{transaction.description}} <span> {{transaction.amount}} </span>
+            <a class="delete-btn" href="{% url 'delete_transaction' transaction.pk %}">
+                <i class="fa-solid fa-trash"></i></a>
+        </li>
+        {% endfor %}
+    </ul>
       <h3>Add new transaction</h3>
-      <form id="form">
+      <form id="form" method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
         <div class="form-control">
           <label for="text">Description</label>
-          <input type="text" id="text" placeholder="Enter description..." />
+          <input type="text" id="text"  name="description" placeholder="Enter description..." />
         </div>
         <div class="form-control">
           <label for="amount"
             >Amount <br />
             <small>(-100 = expense, 100 = income)</small></label
           >
-          <input type="number" id="amount" placeholder="Enter amount..." />
+          <input type="number" id="amount" name="amount" placeholder="Enter amount..." />
         </div>
-        <button class="btn">Add transaction</button>
+        <button class="btn" type="submit">Add transaction</button>
       </form>
     </div>
     <!-- Notification -->
